
[project]
name = "random_insertion"
version = "0.2.0dev"
dependencies = ["numpy>=1.21"]

[build-system]
requires = ["setuptools>=50.0", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages = ["random_insertion"]

[tool.cibuildwheel]
before-all = "uname -a"
build="cp3{7,10,12}-*_x86_64"
skip="cp36-*"

test-requires = ["pytest"]
test-command = "pytest {project}/tests"